* 2015-09-29 4.5
  merge huawei h3c from lazyfrosch-hh3c-switches
* 2015-09-06 4.4
  add rapid-city-mib
  add entity-mib for cisco asa
* 2015-08-18 4.3.1
  add ha-role for Aruba
* 2015-08-17 4.3
  add Alcatel OmniAccess (Aruba)
* 2015-08-17 4.2.1
  GLPlugin update
* 2015-07-31 4.2
  pull request #36. bugfix in cisco asyncos keys (Thanks Frank Meischner)
  pull request #25. cisco check-config more useful. (Thanks mhoogveld)
  add Nortel S5-CHASSIS-MIB, works for 4526GTX
  add OneAccess OneOS
  add Solaris local interfaces
  GLPlugin update
* 2015-07-03 4.1
  add --count-bgp-prefixes for cisco
* 2015-06-28 4.0
  --disable-standalone
  add --watch-bgp-peers
  add --reset for watch-bgp-peers
  bugfix in f5-pool-checks, where oids are not available during a transition"
* 2015-06-25 3.5.4
  allow --name dest/cidr for mode count-routes
* 2015-06-22 3.5.3
  fix a bug in f5 member connection limit noSuchInstance
  add mode count-routes (find mpls problems)
  add mode count-bgp-peers
* 2015-05-06 3.5.2
  add --community2 (necessary if there are different ospf contexts)
  raise max-repetitions for table-bulk-requests (large number of interfaces)
* 2015-04-19 3.5.1
  add LM-SENSOR-MIB
  bugfix in thresholds of morphed performancedata
* 2015-04-09 3.5
  implement ospf and modes ospf-neighbor-status and list-ospf-neighbors
* 2015-03-29 3.4.4.3
  separate discards from errors in linuxlocal
* 2015-03-03 3.4.4.2
  combine pool-connections and pool-completion for f5
  finish pool-complections
* 2015-02-28 3.4.4.1
  detect (not implement!) netgear
* 2015-02-26 3.4.4
  add mode pool-connections for f5
* 2015-02-19 3.4.3
  allow mitigation of admin down bgp peer
  add morphperfdata
* 2015-01-30 3.4.2.8
  bugfix in GLPlugin (multiple --negate)
* 2015-01-28 3.4.2.7
  more trailing null cleanup. (Thanks Jörg Linge)
* 2015-01-27 3.4.2.6
  bugfix in interface-usage windows+snmp+trailing null in ifDescr. (Thanks Jörg Linge)
* 2015-01-14 3.4.2.5